- Restore setting the clock for devices which support the default/legacy   transfer mode only (lost with r321385). [1] - Similarly, don't try to set the power class on MMC devices that comply   to version 4.0 of the system specification but are operated in default/   legacy transfer or 1-bit bus mode as no power class is specified for   these cases. Trying to set a power class nevertheless resulted in an -   albeit harmless - error message.

PR:	231713 [1]